; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_stream_skip_bytes.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_stream_skip_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i8*, %struct.TYPE_12__*, %struct.TYPE_11__ }
%struct.TYPE_12__ = type { i64 (%struct.TYPE_13__*, i8*, i64)*, i64 (%struct.TYPE_13__*)* }
%struct.TYPE_11__ = type { i32, %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i64 }

@READER_SEEKABLE = common dso_local global i32 0, align 4
@SEEK_CUR = common dso_local global i32 0, align 4
@READER_ERROR = common dso_local global i64 0, align 8
@READER_BUFFERED = common dso_local global i32 0, align 4
@MPG123_NO_SEEK = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_13__*, i64)* @stream_skip_bytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @stream_skip_bytes(%struct.TYPE_13__* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_13__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca [1024 x i8], align 16
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %10, i32 0, i32 2
  %12 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @READER_SEEKABLE, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %30

17:                                               ; preds = %2
  %18 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load i32, i32* @SEEK_CUR, align 4
  %21 = call i64 @stream_lseek(%struct.TYPE_13__* %18, i64 %19, i32 %20)
  store i64 %21, i64* %6, align 8
  %22 = load i64, i64* %6, align 8
  %23 = icmp slt i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %17
  %25 = load i64, i64* @READER_ERROR, align 8
  br label %28

26:                                               ; preds = %17
  %27 = load i64, i64* %6, align 8
  br label %28

28:                                               ; preds = %26, %24
  %29 = phi i64 [ %25, %24 ], [ %27, %26 ]
  store i64 %29, i64* %3, align 8
  br label %117

30:                                               ; preds = %2
  %31 = load i64, i64* %5, align 8
  %32 = icmp sge i64 %31, 0
  br i1 %32, label %33, label %75

33:                                               ; preds = %30
  br label %34

34:                                               ; preds = %63, %33
  %35 = load i64, i64* %5, align 8
  %36 = icmp sgt i64 %35, 0
  br i1 %36, label %37, label %67

37:                                               ; preds = %34
  %38 = load i64, i64* %5, align 8
  %39 = icmp slt i64 %38, 1024
  br i1 %39, label %40, label %42

40:                                               ; preds = %37
  %41 = load i64, i64* %5, align 8
  br label %43

42:                                               ; preds = %37
  br label %43

43:                                               ; preds = %42, %40
  %44 = phi i64 [ %41, %40 ], [ 1024, %42 ]
  store i64 %44, i64* %9, align 8
  %45 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %45, i32 0, i32 1
  %47 = load %struct.TYPE_12__*, %struct.TYPE_12__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %47, i32 0, i32 0
  %49 = load i64 (%struct.TYPE_13__*, i8*, i64)*, i64 (%struct.TYPE_13__*, i8*, i64)** %48, align 8
  %50 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %51 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %52 = load i64, i64* %9, align 8
  %53 = call i64 %49(%struct.TYPE_13__* %50, i8* %51, i64 %52)
  store i64 %53, i64* %8, align 8
  %54 = load i64, i64* %8, align 8
  %55 = icmp slt i64 %54, 0
  br i1 %55, label %56, label %58

56:                                               ; preds = %43
  %57 = load i64, i64* %8, align 8
  store i64 %57, i64* %3, align 8
  br label %117

58:                                               ; preds = %43
  %59 = load i64, i64* %8, align 8
  %60 = icmp eq i64 %59, 0
  br i1 %60, label %61, label %62

61:                                               ; preds = %58
  br label %67

62:                                               ; preds = %58
  br label %63

63:                                               ; preds = %62
  %64 = load i64, i64* %8, align 8
  %65 = load i64, i64* %5, align 8
  %66 = sub nsw i64 %65, %64
  store i64 %66, i64* %5, align 8
  br label %34

67:                                               ; preds = %61, %34
  %68 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %69 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %68, i32 0, i32 1
  %70 = load %struct.TYPE_12__*, %struct.TYPE_12__** %69, align 8
  %71 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %70, i32 0, i32 1
  %72 = load i64 (%struct.TYPE_13__*)*, i64 (%struct.TYPE_13__*)** %71, align 8
  %73 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %74 = call i64 %72(%struct.TYPE_13__* %73)
  store i64 %74, i64* %3, align 8
  br label %117

75:                                               ; preds = %30
  %76 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %77 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %76, i32 0, i32 2
  %78 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %77, i32 0, i32 0
  %79 = load i32, i32* %78, align 8
  %80 = load i32, i32* @READER_BUFFERED, align 4
  %81 = and i32 %79, %80
  %82 = icmp ne i32 %81, 0
  br i1 %82, label %83, label %112

83:                                               ; preds = %75
  %84 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %85 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %84, i32 0, i32 2
  %86 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %85, i32 0, i32 1
  %87 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %86, i32 0, i32 0
  %88 = load i64, i64* %87, align 8
  %89 = load i64, i64* %5, align 8
  %90 = sub nsw i64 0, %89
  %91 = icmp sge i64 %88, %90
  br i1 %91, label %92, label %107

92:                                               ; preds = %83
  %93 = load i64, i64* %5, align 8
  %94 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %95 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %94, i32 0, i32 2
  %96 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %95, i32 0, i32 1
  %97 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %96, i32 0, i32 0
  %98 = load i64, i64* %97, align 8
  %99 = add nsw i64 %98, %93
  store i64 %99, i64* %97, align 8
  %100 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %101 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %100, i32 0, i32 1
  %102 = load %struct.TYPE_12__*, %struct.TYPE_12__** %101, align 8
  %103 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %102, i32 0, i32 1
  %104 = load i64 (%struct.TYPE_13__*)*, i64 (%struct.TYPE_13__*)** %103, align 8
  %105 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %106 = call i64 %104(%struct.TYPE_13__* %105)
  store i64 %106, i64* %3, align 8
  br label %117

107:                                              ; preds = %83
  %108 = load i8*, i8** @MPG123_NO_SEEK, align 8
  %109 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %110 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %109, i32 0, i32 0
  store i8* %108, i8** %110, align 8
  %111 = load i64, i64* @READER_ERROR, align 8
  store i64 %111, i64* %3, align 8
  br label %117

112:                                              ; preds = %75
  %113 = load i8*, i8** @MPG123_NO_SEEK, align 8
  %114 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %115 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %114, i32 0, i32 0
  store i8* %113, i8** %115, align 8
  %116 = load i64, i64* @READER_ERROR, align 8
  store i64 %116, i64* %3, align 8
  br label %117

117:                                              ; preds = %112, %107, %92, %67, %56, %28
  %118 = load i64, i64* %3, align 8
  ret i64 %118
}

declare dso_local i64 @stream_lseek(%struct.TYPE_13__*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
